syntax = "proto3";
import "google/protobuf/timestamp.proto";

package com.example;

message GetClosingTimeByRestaurantIdRequest {
  int64 restaurantId = 1;

}

message GetClosingTimeByRestaurantIdResponse {

  google.protobuf.Timestamp timeStamp = 1;
}

message ExtractValidDishesRequest {
  int64 restaurantId = 1;
  repeated int64 dishId = 2;

}
message ExtractValidDishesResponse {
  repeated int64 validDishId = 1;

}
message GetDishByIdRequest {
  int64 dishId = 1;

}
message GetDishByIdResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;

}

service RestaurantService {
  rpc getClosingTimeByRestaurantId(GetClosingTimeByRestaurantIdRequest) returns (GetClosingTimeByRestaurantIdResponse);
  rpc extractValidDishes(ExtractValidDishesRequest) returns (ExtractValidDishesResponse);
  rpc getDishById(GetDishByIdRequest) returns (GetDishByIdResponse);

}